--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of a Freelance Graphic Designer and Digital Artist. Showcasing creative designs and digital art.">
     <title>Graphic Designer & Digital Artist Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Kaisei+Tokumin:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <style>
         body, html {
@@ -28,8 +27,8 @@
         }
         .vertical-title {
             writing-mode: vertical-rl;
-            font-size: 3em;
-            font-family: 'Kaisei Tokumin', cursive;
+            font-size: 6em;
+            font-family: 'Shadows Into Light', cursive;
         }
         .portfolio-section {
             font-family: 'Noto Sans JP', sans-serif;
@@ -89,7 +88,7 @@
 </head>
 <body id="main-container">
     <section id="title" class="full-screen title-section">
-        <h1 class="vertical-title">デザイナー</h1>
+        <h1 class="vertical-title">マディ</h1>
     </section>
     <section id="portfolio" class="full-screen portfolio-section">
         <div class="portfolio-grid">
