--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Portfolio of a Freelance Graphic Designer and Digital Artist. Showcasing creative designs and digital art.">
     <title>Graphic Designer & Digital Artist Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kouzan+Brush+Font&display=swap" rel="stylesheet">
     <style>
         body, html {
             margin: 0;
@@ -28,7 +29,7 @@
         .vertical-title {
             writing-mode: vertical-rl;
             font-size: 6em;
-            font-family: 'Shadows Into Light', cursive;
+            font-family: 'Kouzan Brush Font', cursive;
         }
         .portfolio-section {
             font-family: 'Noto Sans JP', sans-serif;
