--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -30,6 +30,7 @@
             writing-mode: vertical-rl;
             font-size: 6em;
             font-family: 'Kouzan Brush Font', cursive;
+            font-weight: bold; /* Add this line */
         }
         .portfolio-section {
             font-family: 'Noto Sans JP', sans-serif;
