--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,6 +7,8 @@
     <title>Graphic Designer & Digital Artist Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kouzan+Brush+Font&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
+
     <style>
         body, html {
             margin: 0;
@@ -27,9 +29,9 @@
             background-size: cover;
         }
         .vertical-title {
-            writing-mode: vertical-rl;
-            font-size: 6em;
-            font-family: 'Kouzan Brush Font', cursive;
+        writing-mode: vertical-rl;
+        font-size: 3em;
+        font-family: 'Sawarabi Mincho', serif;
             font-weight: bold; /* Add this line */
         }
         .portfolio-section {
