--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -32,7 +32,7 @@
         writing-mode: vertical-rl;
         font-size: 3em;
         font-family: 'Sawarabi Mincho', serif;
-            font-weight: bold; /* Add this line */
+          /*   font-weight: bold;  Add this line */
         }
         .portfolio-section {
             font-family: 'Noto Sans JP', sans-serif;
