--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -28,12 +28,13 @@
             background: url('background.webp') no-repeat center center;
             background-size: cover;
         }
-        .vertical-title {
-        writing-mode: vertical-rl;
-        font-size: 3em;
-        font-family: 'Sawarabi Mincho', serif;
-          /*   font-weight: bold;  Add this line */
-        }
+.vertical-title {
+    writing-mode: vertical-rl;
+    font-size: 3em;
+    font-family: 'Sawarabi Mincho', serif;
+    line-height: 0.9em; /* Adjust this value as needed */
+}
+
         .portfolio-section {
             font-family: 'Noto Sans JP', sans-serif;
         }
