--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -171,9 +171,9 @@
             {
                 title: "Album 5",
                 images: [
-                    { src: "path/to/album5/image1.jpg", description: "Image 1 Description" },
-                    { src: "path/to/album5/image2.jpg", description: "Image 2 Description" },
-                    { src: "path/to/album5/image3.jpg", description: "Image 3 Description" },
+                    { src: "Oasis.webp", description: "Image 1 Description" },
+                    { src: "2.webp", description: "Image 2 Description" },
+                    { src: "3.webp", description: "Image 3 Description" },
                     { src: "path/to/album5/image4.jpg", description: "Image 4 Description" },
                     { src: "path/to/album5/image5.jpg", description: "Image 5 Description" }
                 ]
