--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -73,6 +73,19 @@
             display: none;
             width: 100%;
             height: 100%;
+            animation-name: fade;
+            animation-duration: 1.5s;
+        }
+        .next-slide {
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+        }
+        @keyframes fade {
+            from {opacity: 0.4}
+            to {opacity: 1}
         }
         .slide img {
             width: 100%;
@@ -171,9 +184,9 @@
             {
                 title: "Album 5",
                 images: [
-                    { src: "Oasis.webp", description: "Image 1 Description" },
-                    { src: "2.webp", description: "Image 2 Description" },
-                    { src: "3.webp", description: "Image 3 Description" },
+                    { src: "path/to/album5/image1.jpg", description: "Image 1 Description" },
+                    { src: "path/to/album5/image2.jpg", description: "Image 2 Description" },
+                    { src: "path/to/album5/image3.jpg", description: "Image 3 Description" },
                     { src: "path/to/album5/image4.jpg", description: "Image 4 Description" },
                     { src: "path/to/album5/image5.jpg", description: "Image 5 Description" }
                 ]
@@ -206,9 +219,13 @@
             if (n < 0) slideIndex = slides.length - 1;
             for (let i = 0; i < slides.length; i++) {
                 slides[i].style.display = "none";
+                slides[i].classList.remove("next-slide");
             }
             slides[slideIndex].style.display = "block";
-            setTimeout(() => showSlides(slideIndex += 1), 5000);
+            const nextSlideIndex = (slideIndex + 1) % slides.length;
+            slides[nextSlideIndex].style.display = "block";
+            slides[nextSlideIndex].classList.add("next-slide");
+            setTimeout(() => showSlides(slideIndex += 1), 5000 + 1500);
         }
         window.onclick = function(event) {
             if (event.target === document.getElementById('popup')) {
