--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -73,19 +73,6 @@
             display: none;
             width: 100%;
             height: 100%;
-            animation-name: fade;
-            animation-duration: 1.5s;
-        }
-        .next-slide {
-            display: block;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: -1;
-        }
-        @keyframes fade {
-            from {opacity: 0.4}
-            to {opacity: 1}
         }
         .slide img {
             width: 100%;
@@ -219,13 +206,9 @@
             if (n < 0) slideIndex = slides.length - 1;
             for (let i = 0; i < slides.length; i++) {
                 slides[i].style.display = "none";
-                slides[i].classList.remove("next-slide");
             }
             slides[slideIndex].style.display = "block";
-            const nextSlideIndex = (slideIndex + 1) % slides.length;
-            slides[nextSlideIndex].style.display = "block";
-            slides[nextSlideIndex].classList.add("next-slide");
-            setTimeout(() => showSlides(slideIndex += 1), 5000 + 1500);
+            setTimeout(() => showSlides(slideIndex += 1), 5000);
         }
         window.onclick = function(event) {
             if (event.target === document.getElementById('popup')) {
