--- a/game.html
+++ b/game.html
@@ -32,34 +32,30 @@
             position: relative;
             overflow: hidden;
         }
-        .cell::before, .cell::after {
-            content: '';
-            position: absolute;
-            background-color: black;
-            transition: transform 0.3s ease;
-        }
-        .cell::before {
-            width: 5px;
-            height: 100%;
-            left: 50%;
-            transform: scale(0, 1);
-        }
-        .cell::after {
-            height: 5px;
-            width: 100%;
-            top: 50%;
-            transform: scale(1, 0);
-        }
         .cell.x, .cell.o {
             pointer-events: none;
         }
         .cell.x::before, .cell.x::after {
+            content: '';
+            position: absolute;
             background-color: #ff6347;
-            transform: scale(1);
+            height: 5px;
+            width: 100%;
+            top: 50%;
+            transform: rotate(45deg);
         }
-        .cell.o::before, .cell.o::after {
+        .cell.x::after {
+            transform: rotate(-45deg);
+        }
+        .cell.o::before {
+            content: '';
+            position: absolute;
             background-color: #4caf50;
-            transform: rotate(45deg) scale(1);
+            border-radius: 50%;
+            height: 80%;
+            width: 80%;
+            top: 10%;
+            left: 10%;
         }
         .winner-message {
             display: none;
@@ -166,6 +162,7 @@
             isXTurn = true;
             cells.forEach(cell => {
                 cell.classList.remove('x', 'o');
+                cell.addEventListener('click', handleClick, { once: true });
             });
             winnerMessageElement.classList.remove('show');
         };
