--- a/Projects/new.html
+++ b/Projects/new.html
@@ -11,17 +11,22 @@
             background-color: black;
             color: white;
             font-family: Arial, sans-serif;
+            line-height: 1.6;
         }
         .container {
-            width: 80%;
+            max-width: 800px;
             margin: 0 auto;
+            padding: 20px;
             text-align: center;
         }
-        .logo {
-            margin-top: 50px;
+        .logo img {
+            max-width: 200px;
         }
-        .download-button {
-            margin: 20px;
+        .about, .supported-devices, .technical-details, .credits {
+            margin-top: 40px;
+        }
+        .download-button, .fixed-download-button, button {
+            margin-top: 20px;
             padding: 10px 20px;
             background-color: #4CAF50;
             color: white;
@@ -29,26 +34,8 @@
             cursor: pointer;
             transition: background-color 0.3s;
         }
-        .download-button:hover {
+        .download-button:hover, .fixed-download-button:hover, button:hover {
             background-color: #45a049;
-        }
-        .fixed-download-button {
-            position: fixed;
-            top: 0;
-            right: 0;
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            display: none;
-        }
-        .fixed-download-button:hover {
-            background-color: #45a049;
-        }
-        .technical-details {
-            margin-top: 50px;
         }
         .popup {
             display: none;
@@ -68,12 +55,10 @@
             right: 20px;
             font-size: 30px;
             cursor: pointer;
-        }
-        .credits {
-            margin-top: 50px;
+            color: white;
         }
         .footer {
-            margin-top: 50px;
+            margin-top: 40px;
             padding: 20px;
             background-color: #333;
         }
@@ -86,11 +71,11 @@
         </div>
         <div class="about">
             <h2>About Carbon</h2>
-            <p>Your intuitive and beginner-friendly HTML IDE.</p>
+            <p>Carbon is an intuitive and beginner-friendly HTML IDE designed to simplify HTML programming. It features a live preview, syntax highlighting, auto-completion, error detection, and more to enhance your coding experience.</p>
         </div>
         <div class="supported-devices">
             <h2>Supported Devices</h2>
-            <p>Windows, macOS, Linux</p>
+            <p>Currently available for Windows x64 and ARM. Future support for macOS and Linux is planned.</p>
         </div>
         <button class="download-button">Download Carbon</button>
         <div class="technical-details">
@@ -99,7 +84,7 @@
         </div>
         <div class="credits">
             <h2>Credits</h2>
-            <p>Developed by Uncommon Code Co.</p>
+            <p>Developed by Uncommon Code Co., a student-led, nonprofit organization committed to creating innovative software solutions.</p>
         </div>
         <div class="footer">
             <p>&copy; 2024 Uncommon Code Co. All rights reserved.</p>
@@ -108,7 +93,7 @@
     <div class="popup" id="popup">
         <span class="close-button" onclick="closePopup()">&times;</span>
         <h2>Technical Details</h2>
-        <p>Carbon is built using C#, WinForms, and CefSharp...</p>
+        <p>Carbon is built using C#, WinForms, and CefSharp for a seamless and efficient development experience. It offers a modern and customizable interface, with features like theme customization, file management, and a JavaScript console to cater to both beginners and experienced developers.</p>
         <a href="https://github.com/yourusername/carbon" target="_blank">View on GitHub</a>
     </div>
     <button class="fixed-download-button" onclick="scrollToTop()">Download Carbon</button>
