--- a/Projects/new.html
+++ b/Projects/new.html
@@ -63,5 +63,39 @@
         <img src="logo.png" alt="Logo" class="logo">
         <div class="text">Your Text Here</div>
     </section>
+    <section class="section">
+    <h2>About Carbon</h2>
+    <div class="screenshots">
+        <img src="screenshot1.png" alt="Screenshot 1">
+        <img src="screenshot2.png" alt="Screenshot 2">
+        <img src="screenshot3.png" alt="Screenshot 3">
+        <!-- Add more screenshots as needed -->
+    </div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tristique magna eu eros dapibus, eget rutrum felis convallis.</p>
+    <h3>About Me</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tristique magna eu eros dapibus, eget rutrum felis convallis.</p>
+    <div class="downloads">
+        <a href="#" class="download">Download for Windows x64</a>
+        <a href="#" class="download">Download for Windows ARM64</a>
+        <span class="popup-trigger">*</span>
+        <div class="popup">
+            <p>Minimum Requirements:</p>
+            <ul>
+                <li>Operating System: Windows 10</li>
+                <li>Processor: Intel Core i5</li>
+                <li>RAM: 8GB</li>
+                <li>Storage: 500MB</li>
+            </ul>
+            <p>Recommended Specifications:</p>
+            <ul>
+                <li>Operating System: Windows 11</li>
+                <li>Processor: Intel Core i7</li>
+                <li>RAM: 16GB</li>
+                <li>Storage: 1GB</li>
+            </ul>
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
