--- a/arch.html
+++ b/arch.html
@@ -16,17 +16,17 @@
         }
         header {
             background-color: transparent;
-            color: #fff;
-            padding: 10px 0;
+            color: white;
+            padding: 20px 0;
             text-align: center;
             position: fixed;
             width: 100%;
-            top: 0;
+            top: 50px; /* Adjust based on your header height */
             z-index: 1000;
             transition: top 0.3s;
         }
         header.hidden {
-            top: -60px; /* Adjust based on your header height */
+            top: -100px; /* Adjust based on your header height */
         }
         nav ul {
             list-style-type: none;
@@ -38,7 +38,7 @@
             margin-right: 20px;
         }
         nav ul li a {
-            color: #fff;
+            color: white;
             text-decoration: none;
         }
         main {
